# lab3

./: CMakeLists.txt  LICENSE  desktop.ini  main.cpp
functions/: functions.cpp  functions.h
